[package]
name = "vimania_uri_rs"
version = "1.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "vimania_uri_rs"
#crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
camino = "1.1.9"
ctor = "0.4.0"
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.26"
pyo3 = { version = "0.24.0", features = ["extension-module", "anyhow"] }
pyo3-log = "0.12.1"
reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"] }
rstest = "0.25.0"
scraper = "0.23.1"
stdext = "0.3.3"

# https://pyo3.rs/v0.7.0-alpha.1/advanced.html#testing
# cargo test --no-default-features
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
mockito = "1.6.1"

[build-dependencies]
pyo3-build-config = "0.24.1"
