[project]
name = "vimania_uri_rs"
version = "1.1.2"
description = "Add your description here"
authors = [
    { name = "sysid", email = "sysid@gmx.de" }
]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
]
homepage = "https://github.com/sysid/vimania-uri-rs"

[project.urls]
Source = "https://github.com/sysid/vimania-uri-rs"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.uv]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
    "maturin-import-hook>=0.1.0",
    "mypy>=1.14.0",
    "pip>=24.3.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["py"]

[tool.bumpversion]
current_version = "1.1.2"
commit = true
tag = false
message = "Bump version to {new_version}"

[tool.bumpversion.file_patterns]
"VERSION" = [
    {search = "{current_version}", replace = "{new_version}"},
]
"pyproject.toml" = [
    {search = "version = {current_version}", replace = "version = {new_version}"},
]

[[tool.bumpversion.files]]
filename = "VERSION"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
ignore_missing_imports = false
namespace_packages = true
